--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ margin-right: 2%;
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <a href="Fotografia.html"><img src="FotoBox.jpg" alt="Boxing" style="width:100%"></a>
-                <div class="text" >Fotografía</div>
+                <div class="text" >FotografÃ­a</div>
             </div>
 
             <div class="mySlides fade">
@@ -248,7 +248,7 @@ margin-right: 2%;
             <h1>About</h1>
 
           
-                <b>Hi!</b><br>My name is Constanza Morero, I'm 18 years old and I study Design, Arts and Technology at Ort´s University. 
+                <b>Hi!</b><br>My name is Constanza Morero, I'm 18 years old and I study Design, Arts and Technology at OrtÂ´s University. 
                 <br>On this website you can find my recent work, from paintings, photography and digital drawing. 
                 <br>I will be posting my newest work so keep checking the web!
             </div>
