--- a/pinturas.html
+++ b/pinturas.html
@@ -78,10 +78,12 @@ Licence URI: https://www.os-templates.com/template-terms
                 margin-top: 8px;
                 vertical-align: middle;
                 width: 100%;
+              
         }
 
-        
-
+        img {
+            padding: 1%;
+        }
             /* Responsive layout - makes a two column-layout instead of four columns */
             @media screen and (max-width: 800px) {
                 .column {
@@ -90,7 +92,6 @@ Licence URI: https://www.os-templates.com/template-terms
                     max-width: 50%;
                 }
             }
-
             /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
             @media screen and (max-width: 600px) {
                 .column {
@@ -140,7 +141,7 @@ Licence URI: https://www.os-templates.com/template-terms
                     margin: 0 auto;
                     max-width: 85%;
                 }
-        }
+            }
     </style>
 </head>
 <body>
