--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- Top Background Image Wrapper -->
-    <div class="bgded overlay" style="background-image:url('inicio/01.jpg');" >
+    <div class="bgded overlay" style="        background-image: url('inicio/01.png');" >
     <!-- ################################################################################################ -->
     
         <div class="wrapper row1">
@@ -113,7 +113,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
-    <div class="bgded overlay" style="background-image:url('images/demo/backgrounds/02.png');" >
+    
 
     </div >
     <!-- ################################################################################################ -->
@@ -123,7 +123,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
-    <div class="bgded overlay row4" style="background-image:url('images/demo/backgrounds/05.png');" >
+  
     <footer id="footer" class="hoc clear" >
 
     <div id="ctdetails" class="clear" >
