--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ Licence URI: https://www.os-templates.com/template-terms
        h1, h2, h3, h4, h5, h6, .heading {
     font-family: Verdana, Geneva, sans-serif;
 }
+        .row2 {
+          
+            background-color: #474747;
+        }
     </style>
 </head>
 
