--- a/murales.html
+++ b/murales.html
@@ -191,7 +191,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="container">
         <div class="mySlides">
             <div class="numbertext">1 / 7</div>
-            <img src="murales/1.png" style="width:100%">
+            <img src="murales/1.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
