--- a/murales.html
+++ b/murales.html
@@ -196,32 +196,32 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="mySlides">
             <div class="numbertext">2 / 7</div>
-            <img src="murales/2.png" style="width:100%">
+            <img src="murales/2.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">3 / 7</div>
-            <img src="murales/3.png" style="width:100%">
+            <img src="murales/3.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">4 / 7</div>
-            <img src="murales/4.png" style="width:100%">
+            <img src="murales/4.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">5 / 7</div>
-            <img src="murales/5.png" style="width:100%">
+            <img src="murales/5.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">6 / 7</div>
-            <img src="murales/6.png" style="width:100%">
+            <img src="murales/6.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">7/ 7</div>
-            <img src="murales/7.png" style="width:100%">
+            <img src="murales/7.jpg" style="width:100%">
         </div>
       
 
@@ -234,25 +234,25 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column">
-                <img class="demo cursor" src="murales/1.png" style="width:100%" onclick="currentSlide(1)" alt="Rambla, parada 21 de la mansa, Maldonado.">
+                <img class="demo cursor" src="murales/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="Rambla, parada 21 de la mansa, Maldonado.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/2.png" style="width:100%" onclick="currentSlide(2)" alt="Venecia y Roque Saenz Peña, Ciudad de la Costa.">
+                <img class="demo cursor" src="murales/2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Venecia y Roque Saenz Peña, Ciudad de la Costa.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/3.png" style="width:100%" onclick="currentSlide(3)" alt="Marco Bruto y 26 de Marzo, Montevideo.">
+                <img class="demo cursor" src="murales/3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Marco Bruto y 26 de Marzo, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/4.png" style="width:100%" onclick="currentSlide(4)" alt="Nicaragua y General Rondeau, Montevideo.">
+                <img class="demo cursor" src="murales/4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Nicaragua y General Rondeau, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/5.png" style="width:100%" onclick="currentSlide(5)" alt="Ellauri y Bulevar España, Montevideo.">
+                <img class="demo cursor" src="murales/5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Ellauri y Bulevar España, Montevideo.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/6.png" style="width:100%" onclick="currentSlide(6)" alt="Veterinaria Barrios Jr, Maldonado.">
+                <img class="demo cursor" src="murales/6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Veterinaria Barrios Jr, Maldonado.">
             </div>
             <div class="column">
-                <img class="demo cursor" src="murales/7.png" style="width:100%" onclick="currentSlide(7)" alt="En Estadia Pocitos, Montevideo">
+                <img class="demo cursor" src="murales/7.jpg" style="width:100%" onclick="currentSlide(7)" alt="En Estadia Pocitos, Montevideo">
             </div>
         </div>
     </div>
