--- a/pinturas.html
+++ b/pinturas.html
@@ -174,34 +174,34 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="row">
         <div class="column">
 
-            <img src="fotografia/1.png" style="width:100%">
-            <img src="fotografia/2.png" style="width:100%">
-            <img src="fotografia/18.png" style="width:100%">
+            <img src="fotografia/1.jpg" style="width:100%">
+            <img src="fotografia/2.jpg" style="width:100%">
+            <img src="fotografia/18.jpg" style="width:100%">
 
         </div>
         <div class="column">
 
 
-            <img src="fotografia/15.png" style="width:100%">
-            <img src="fotografia/4.png" style="width:100%">
-            <img src="fotografia/5.png" style="width:100%">
-            <img src="fotografia/6.png" style="width:100%">
+            <img src="fotografia/15.jpg" style="width:100%">
+            <img src="fotografia/4.jpg" style="width:100%">
+            <img src="fotografia/5.jpg" style="width:100%">
+            <img src="fotografia/6.jpg" style="width:100%">
         </div>
         <div class="column">
 
-            <img src="fotografia/17.png" style="width:100%">
-            <img src="fotografia/13.png" style="width:100%">
-            <img src="fotografia/7.png" style="width:100%">
-            <img src="fotografia/8.png" style="width:100%">
-            <img src="fotografia/9.png" style="width:100%">
+            <img src="fotografia/17.jpg" style="width:100%">
+            <img src="fotografia/13.jpg" style="width:100%">
+            <img src="fotografia/7.jpg" style="width:100%">
+            <img src="fotografia/8.jpg" style="width:100%">
+            <img src="fotografia/9.jpg" style="width:100%">
 
         </div>
         <div class="column">
-            <img src="fotografia/12.png" style="width:100%">
-            <img src="fotografia/14.png" style="width:100%">
-            <img src="fotografia/16.png" style="width:100%">
-            <img src="fotografia/10.png" style="width:100%">
-            <img src="fotografia/11.png" style="width:100%">
+            <img src="fotografia/12.jpg" style="width:100%">
+            <img src="fotografia/14.jpg" style="width:100%">
+            <img src="fotografia/16.jpg" style="width:100%">
+            <img src="fotografia/10.jpg" style="width:100%">
+            <img src="fotografia/11.jpg" style="width:100%">
 
         </div>
     </div>
