--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- Top Background Image Wrapper -->
-    <div class="bgded overlay" style="        background-image: url('inicio/01.png');">
+    <div class="bgded overlay" style="        background-image: url('inicio/01.jpg');">
         <!-- ################################################################################################ -->
 
         <div class="wrapper row1">
