--- a/murales.html
+++ b/murales.html
@@ -39,11 +39,13 @@ Licence URI: https://www.os-templates.com/template-terms
         /* Position the image container (needed to position the left and right arrows) */
         .container {
             position: relative;
-            width: 50%;
+            max-width: 1000px;
+            width: 100%;
             display: block;
             margin-left: auto;
             margin-right: auto;
             padding: 0px;
+        }
         }
 
         /* Hide the images by default */
