--- a/fotografias.html
+++ b/fotografias.html
@@ -185,10 +185,10 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/1.png" style="width:100%">
+                <img src="fotografia2/horizontal/01.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/2.png" style="width:100%">
+                <img src="fotografia2/horizontal/02.jpg" style="width:100%">
             </div>
 
         </div>
@@ -207,20 +207,83 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/3.png" style="width:100%">
+                <img src="fotografia2/horizontal/1.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/4.png" style="width:100%">
+                <img src="fotografia2/horizontal/2.jpg" style="width:100%">
             </div>
 
         </div>
 
 
+        <div class="row">
+            <div class="column">
+                <img src="fotografia2/vertical/4.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/5.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/6.png" style="width:100%">
+            </div>
+        </div>
 
 
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/3.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/4.jpg" style="width:100%">
+            </div>
+
+        </div>
 
 
+        <div class="row">
+            <div class="column">
+                <img src="fotografia2/vertical/4.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/5.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/6.png" style="width:100%">
+            </div>
+        </div>
 
+
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/5.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/6.jpg" style="width:100%">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="fotografia2/vertical/4.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/5.png" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="fotografia2/vertical/6.png" style="width:100%">
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/7.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/8.jpg" style="width:100%">
+            </div>
+
+        </div>
 
 
 
