--- a/fotografias.html
+++ b/fotografias.html
@@ -173,13 +173,13 @@ Licence URI: https://www.os-templates.com/template-terms
         <!-- Photo Grid -->
         <div class="row">
             <div class="column">
-                <img src="fotografia2/vertical/1.png" style="width:100%">
+                <img src="fotografia2/vertical/1.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/2.png" style="width:100%">
+                <img src="fotografia2/vertical/2.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/3.png" style="width:100%">
+                <img src="fotografia2/vertical/3.jpg" style="width:100%">
             </div>
         </div>
 
@@ -195,13 +195,13 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column">
-                <img src="fotografia2/vertical/4.png" style="width:100%">
+                <img src="fotografia2/vertical/4.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/5.png" style="width:100%">
+                <img src="fotografia2/vertical/5.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/6.png" style="width:100%">
+                <img src="fotografia2/vertical/6.jpg" style="width:100%">
             </div>
         </div>
 
@@ -218,13 +218,13 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column">
-                <img src="fotografia2/vertical/4.png" style="width:100%">
+                <img src="fotografia2/vertical/7.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/5.png" style="width:100%">
+                <img src="fotografia2/vertical/8.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/6.png" style="width:100%">
+                <img src="fotografia2/vertical/9.jpg" style="width:100%">
             </div>
         </div>
 
@@ -242,13 +242,13 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column">
-                <img src="fotografia2/vertical/4.png" style="width:100%">
+                <img src="fotografia2/vertical/10.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/5.png" style="width:100%">
+                <img src="fotografia2/vertical/11.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/6.png" style="width:100%">
+                <img src="fotografia2/vertical/12.jpg" style="width:100%">
             </div>
         </div>
 
@@ -264,13 +264,13 @@ Licence URI: https://www.os-templates.com/template-terms
         </div>
         <div class="row">
             <div class="column">
-                <img src="fotografia2/vertical/4.png" style="width:100%">
+                <img src="fotografia2/vertical/13.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/5.png" style="width:100%">
+                <img src="fotografia2/vertical/14.jpg" style="width:100%">
             </div>
             <div class="column">
-                <img src="fotografia2/vertical/6.png" style="width:100%">
+                <img src="fotografia2/vertical/15.jpg" style="width:100%">
             </div>
         </div>
 
