--- a/fotografias.html
+++ b/fotografias.html
@@ -199,6 +199,18 @@ Licence URI: https://www.os-templates.com/template-terms
                 </div>
 
             </div>
+
+            <div class="row">
+                <div class="column2">
+                    <img src="fotografia2/horizontal/1.jpg" style="width:100%">
+                </div>
+                <div class="column2">
+                    <img src="fotografia2/horizontal/2.jpg" style="width:100%">
+                </div>
+
+            </div>
+
+
             <div class="column">
                 <img src="fotografia2/vertical/1.jpg" style="width:100%">
             </div>
@@ -212,10 +224,10 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/1.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/3.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/2.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/4.jpg" style="width:100%">
             </div>
 
         </div>
@@ -234,10 +246,10 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/3.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/5.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/4.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/6.jpg" style="width:100%">
             </div>
 
         </div>
@@ -256,15 +268,28 @@ Licence URI: https://www.os-templates.com/template-terms
         </div>
 
 
+
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/5.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/7.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/6.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/8.jpg" style="width:100%">
             </div>
 
         </div>
+
+
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/9.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/10.jpg" style="width:100%">
+            </div>
+
+        </div>
+
 
 
         <div class="row">
@@ -279,13 +304,21 @@ Licence URI: https://www.os-templates.com/template-terms
             </div>
         </div>
 
-
         <div class="row">
             <div class="column2">
-                <img src="fotografia2/horizontal/7.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/11.jpg" style="width:100%">
             </div>
             <div class="column2">
-                <img src="fotografia2/horizontal/8.jpg" style="width:100%">
+                <img src="fotografia2/horizontal/12.jpg" style="width:100%">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/13.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/14.jpg" style="width:100%">
             </div>
 
         </div>
@@ -304,7 +337,34 @@ Licence URI: https://www.os-templates.com/template-terms
             </div>
         </div>
 
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/15.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/16.jpg" style="width:100%">
+            </div>
 
+        </div>
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/17.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/18.jpg" style="width:100%">
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="column2">
+                <img src="fotografia2/horizontal/19.jpg" style="width:100%">
+            </div>
+            <div class="column2">
+                <img src="fotografia2/horizontal/20.jpg" style="width:100%">
+            </div>
+
+        </div>
 
 
 
