--- a/fotografias.html
+++ b/fotografias.html
@@ -11,6 +11,13 @@
 
     <title>Coetzy</title>
     <style>
+        @font-face {
+            font-family: brandon;
+            src: url(Br.otf);
+            font-style: normal;
+            font-weight: 100;
+        }
+        
         #pageintro .heading {
             margin-bottom: 20px;
             font-size: 2rem;
@@ -34,14 +41,10 @@
             background-color: rgba(0,0,0,.0);
         }
 
-        .row1 {
-            border: solid;
-            border-width: 1px 0;
-            background-color: rgba(0,0,0,.70);
-        }
+        
 
         h1, h2, h3, h4, h5, h6, .heading {
-            font-family: Verdana, Geneva, sans-serif;
+            font-family: brandon;
         }
 
         * {
@@ -50,7 +53,7 @@
 
         body {
             margin: 0;
-            background-color: #f5f5f5;
+            BACKGROUND-COLOR: WHITE;
         }
 
         .header {
@@ -182,21 +185,23 @@
         <button class="w3-bar-item w3-button" onclick="openCity('1')" style="        border: none;
         display: inline;
         cursor: pointer;
-        font-size: 16px;
-        background-color: lightgrey;
+        font-size: 14px;
+        letter-spacing: 1.5px;
+        BACKGROUND-COLOR: WHITE;
         padding: 10px 20px;
-        font-family: Verdana, Geneva, sans-serif;">
-            Analógicas
+        font-family: brandon;">
+            ANALÓGICAS
         </button>
 
         <button class="w3-bar-item w3-button" onclick="openCity('2')" style="        border: none;
         display: inline;
         cursor: pointer;
-        font-size: 16px;
-        background-color: lightgrey;
+        font-size: 14px;
+        letter-spacing: 1.5px;
+        BACKGROUND-COLOR: WHITE;
         padding: 10px 20px;
-        font-family: Verdana, Geneva, sans-serif;">
-            Digitales
+        font-family: brandon;">
+            DIGITALES
         </button>
 
     </div>
