--- a/murales.html
+++ b/murales.html
@@ -16,6 +16,14 @@ Licence URI: https://www.os-templates.com/template-terms
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+
+        @font-face {
+    font-family: brandon;
+    src: url(Br.otf);
+    font-style: normal;
+    font-weight: 100;
+}
+
         body {
           
             margin: 0;
