--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ Licence URI: https://www.os-templates.com/template-terms
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
     <style>
+
+        @font-face {
+            font-family: brandon;
+            src: url(Br.otf);
+            font-style: normal;
+            font-weight: 100;
+        }
         #pageintro .heading {
             margin-bottom: 20px;
             font-size: 2rem;
